--- a/_posts/2016-01-29-week-4.markdown
+++ b/_posts/2016-01-29-week-4.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "Hackbright Week 4"
 date:   2016-01-30 1:21:00 -0800
 comments: true
-categories: life-update Hackbright learning-code
+categories: hackbright
 ---
 As we cross the Week 4 finish line at Hackbright, we are also nearing the end of our metaphorical "80 days around the world of web development" (if only we actually got 80 days before we started our projects!).
 
@@ -21,5 +21,3 @@ As I worked through the first iteration of the data model for my project, I used
 Finally, I wanted to quickly talk about some changes that I will be making to the structure of my blog posts over the course of the next few weeks. As we start projects, the posts will shift focus to tracking my project and I will likely use it in conjunction with our daily scrum meetings. For readers not fully familiar with Hackbright, our projects will be individual and span weeks 6 through 10 of the program, so these upcoming weeks are very exciting! Expect the changes to take affect soon, probably over the course of Week 5 as I start to experiment with stuff for my project.
 
 As usual, thanks for reading and supporting me through my journey at Hackbright! &#129412;
-
-
